corrections to sec-6 have been done

--- a/style.css
+++ b/style.css
@@ -1154,7 +1154,7 @@ footer{
     }
     .item_left img{
         object-fit: cover;
-        height: auto%;
+        height: 100%;
         width: 100%;
         position: static;
     }
