--- a/style.css
+++ b/style.css
@@ -1150,16 +1150,15 @@ nav{
 }
 /*------------------Section-6--------------------*/
     .sec-6{
-    background-color: #ffeff5;
+    background-color: #f5f1ec;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     flex-direction: column;
-    height: auto;
     margin: 0;
-    padding: 50px 0;
-    gap: 40px;
+    padding: 20px 0 40px 0;
+    gap: 10px;
     }
     .grid-container {
       grid-template-columns: 1fr; 
@@ -1183,6 +1182,14 @@ nav{
     }
     .item_right{
         height: 200px;
+    }
+    .right1{
+        width: 100%;
+        height: auto;
+        gap: 30px;
+        display: flex;
+        flex-direction: column;
+        min-width: 250px;    
     }
 /*------------------Section-7---------------------*/
 .sec-7{
